add section skills

--- a/src/input.css
+++ b/src/input.css
@@ -3,6 +3,7 @@
 @plugin "flyonui";
 @import "flyonui/variants.css";
 @import "../style/style.css";
+/* Splide */
 
 /* Custom styles */
 @layer components {
