--- a/src/input.css
+++ b/src/input.css
@@ -48,6 +48,12 @@
       font-medium
       my-2;
   }
+  .icons-features div {
+    @apply bg-transparent rounded-2xl
+    p-2 md:p-6 flex flex-col items-center
+    cursor-pointer gap-2 transition-all 
+    duration-300 hover:-translate-y-2 hover:shadow-lg;
+  }
 }
 
 /* =========================
