--- a/src/output.css
+++ b/src/output.css
@@ -4210,6 +4210,12 @@
       line-height: var(--tw-leading, var(--text-lg--line-height));
     }
   }
+  .md\:text-xl {
+    @media (width >= 48rem) {
+      font-size: var(--text-xl);
+      line-height: var(--tw-leading, var(--text-xl--line-height));
+    }
+  }
   .md\:text-\[29px\] {
     @media (width >= 48rem) {
       font-size: 29px;
