--- a/src/output.css
+++ b/src/output.css
@@ -9,6 +9,8 @@
       "Courier New", monospace;
     --color-gray-200: oklch(92.8% 0.006 264.531);
     --color-gray-400: oklch(70.7% 0.022 261.325);
+    --color-gray-700: oklch(37.3% 0.034 259.733);
+    --color-black: #000;
     --color-white: #fff;
     --spacing: 0.25rem;
     --container-5xl: 64rem;
@@ -3848,6 +3850,9 @@
   .text-\[var\(--text-color\)\] {
     color: var(--text-color);
   }
+  .text-black {
+    color: var(--color-black);
+  }
   .text-white {
     color: var(--color-white);
   }
@@ -4234,6 +4239,26 @@
   .md\:text-\[36px\] {
     @media (width >= 48rem) {
       font-size: 36px;
+    }
+  }
+  .dark\:border-gray-700 {
+    @media (prefers-color-scheme: dark) {
+      border-color: var(--color-gray-700);
+    }
+  }
+  .dark\:bg-\[\#0F0F1A\] {
+    @media (prefers-color-scheme: dark) {
+      background-color: #0F0F1A;
+    }
+  }
+  .dark\:bg-\[\#1B1B2F\] {
+    @media (prefers-color-scheme: dark) {
+      background-color: #1B1B2F;
+    }
+  }
+  .dark\:text-white {
+    @media (prefers-color-scheme: dark) {
+      color: var(--color-white);
     }
   }
 }
